# idlemypyextension

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  check.sh  ci.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  test-requirements.in  test-requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: autodeps.yml  ci.yml  python-publish.yml  tests.yml
scripts/: build.sh
src/idlemypyextension/: __init__.py  annotate.py  ast_annotate.py  client.py  extension.py  moduleguard.py  mttkinter.py  tktrio.py  utils.py
stubs/idlelib/: autocomplete.pyi  autocomplete_w.pyi  browser.pyi  calltip.pyi  calltip_w.pyi  codecontext.pyi  colorizer.pyi  config.pyi  config_key.pyi  configdialog.pyi  debugger.pyi  debugger_r.pyi  debugobj.pyi  debugobj_r.pyi  delegator.pyi  dynoption.pyi  editor.pyi  filelist.pyi  format.pyi  grep.pyi  help.pyi  help_about.pyi  history.pyi  hyperparser.pyi  iomenu.pyi  macosx.pyi  multicall.pyi  outwin.pyi  parenmatch.pyi  pathbrowser.pyi  percolator.pyi  pyparse.pyi  pyshell.pyi  query.pyi  redirector.pyi  replace.pyi  rpc.pyi  run.pyi  runscript.pyi  scrolledlist.pyi  (+12 more)
tests/: test_annotate.py  test_result.py  test_tktrio.py  test_utils.py
