[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "idlemypyextension"
version = "0.2.3"
authors = [
  { name="CoolCat467" },
]
description = "Mypy daemon extension for Python IDLE"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Framework :: IDLE",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["mypy", "dmypy", "idle", "extension", "development", "daemon"]
dependencies = [
    "mypy~=1.6.0",
    "trio~=0.22.2",
]

[project.optional-dependencies]
user = ["idleuserextend~=0.0.0"]

[project.urls]
"Homepage" = "https://github.com/CoolCat467/idlemypyextension"
"Source" = "https://github.com/CoolCat467/idlemypyextension"
"Bug Tracker" = "https://github.com/CoolCat467/idlemypyextension/issues"

[project.scripts]
idlemypyextension = "idlemypyextension:check_installed"

[tool.setuptools.package-data]
idlemypyextension = ["py.typed"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov=idlemypyextension"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_column_numbers = true
show_error_codes = true
show_traceback = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.black]
line-length = 79
target-version = ['py310']

[tool.ruff.isort]
combine-as-imports = true

[tool.pycln]
all = true
disable_all_dunder_policy = true

[tool.ruff.per-file-ignores]
"tests/*" = ["D103"]

[tool.ruff]
line-length = 79
fix = true

include = ["*.py", "*.pyi", "**/pyproject.toml"]

select = ['A', 'B', 'C4', 'COM', 'D', 'E', 'EXE', 'F', 'FA', 'I', 'N', 'PIE', 'PT', 'PYI', 'Q', 'RET', 'RUF', 'S', 'SIM', 'SLOT', 'UP', 'YTT']
ignore = [
    "D211",  # conflicts with docstrings
    "D213",  # conflicts with docstrings
##    "E203",  # conflicts with black
    "E501",  # line-too-long
    "S101",  # use of assert for tests and type narrowing
##    "E402",  # module level import not at top of file
    "D203",  # One blank line before class
    "D401",  # Imparative mood docstrings
    "D417",  # Bugged "Missing argument descriptions in the docstring"
]

fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []#"D203"]

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py310, py311, mypy, pytest
    isolated_build = false

    [gh-actions]
    python =
        3.10: py310, mypy, pytest
        3.11: py311, mypy

    [testenv]
    setenv =
        PYTHONPATH = {toxinidir}

    [testenv:pytest]
    deps =
        pytest
        pytest-cov
        pytest-trio
    commands = pytest --basetemp={envtmpdir}

    [testenv:mypy]
    deps =
        mypy
    commands = mypy src
"""
