[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "idlemypyextension"
dynamic = ["version"]
authors = [
  { name="CoolCat467", email="CoolCat467@duck.com" },
]
description = "Mypy daemon extension for Python IDLE"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Framework :: IDLE",
    "Framework :: Trio",
    "Typing :: Typed",
]
keywords = ["mypy", "dmypy", "idle", "extension", "development", "daemon"]
dependencies = [
    "mypy~=1.14.1",
    'orjson; implementation_name == "cpython"',
    "trio~=0.28.0",
]

[tool.setuptools.dynamic]
version = {attr = "idlemypyextension.__init__.__version__"}

[project.optional-dependencies]
user = ["idleuserextend~=0.0.1"]
tests = [
    "pytest>=5.0",
    "pytest-cov",
    "pytest-trio",
    "coverage>=7.2.5",
    "uv>=0.5.21",
]
tools = [
    'black>=24.10.0; implementation_name == "cpython"',
    "ruff>=0.9.2",
    "codespell>=2.3.0",
]

[project.urls]
"Source" = "https://github.com/CoolCat467/idlemypyextension"
"Bug Tracker" = "https://github.com/CoolCat467/idlemypyextension/issues"

[project.scripts]
idlemypyextension = "idlemypyextension:cli_run"

[tool.setuptools.package-data]
idlemypyextension = ["py.typed"]

[tool.mypy]
files = ["src/idlemypyextension/",]
mypy_path = "stubs"
show_column_numbers = true
show_error_codes = true
show_traceback = true
disallow_any_decorated = true
disallow_any_unimported = true
ignore_missing_imports = true
local_partial_types = true
no_implicit_optional = true
strict = true
warn_unreachable = true

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pycln]
all = true
disable_all_dunder_policy = true

[tool.typos]
files.extend-exclude = ["*.pyi"]

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
fix = true

include = ["*.py", "*.pyi", "**/pyproject.toml"]

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "COM",   # flake8-commas
    "D",     # pydocstyle
    "E",     # Error
    "EXE",   # flake8-executable
    "F",     # pyflakes
    "FA",    # flake8-future-annotations
    "FLY",   # flynt
    "FURB",  # refurb
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "N",     # pep8-naming
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "R",     # Refactor
    "RET",   # flake8-return
    "RUF",   # Ruff-specific rules
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "SLOT",  # flake8-slots
    "TCH",   # flake8-type-checking
    "UP",    # pyupgrade
    "W",     # Warning
    "YTT",   # flake8-2020
]
extend-ignore = [
    "D203",   # one-blank-line-before-class
    "D204",   # one-blank-line-after-class
    "D211",   # no-blank-line-before-class
    "D213",   # multi-line-summary-second-line
    "D417",   # undocumented-param "Missing argument descriptions"
    "E501",   # line-too-long
    "PYI041", # redundant-numeric-union
    "S101",   # assert (use of assert for tests and type narrowing)
    "SIM117", # multiple-with-statements
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100",  # undocumented-public-module
    "D103",  # undocumented-public-function
    "D107",  # undocumented-public-init
]
"stubs/*" = [
    "A001",  # builtin-variable-shadowing
    "A002",  # builtin-argument-shadowing
    "N802",  # invalid-function-name (lowercase)
    "N803",  # invalid-argument-name (lowercase)
    "N815",  # mixed-case-variable-in-class-scope
    "N816",  # mixed-case-variable-in-global-scope
    "N818",  # error-suffix-on-exception-name
]

[tool.pytest.ini_options]
addopts = "--cov-report=xml --cov-report=term-missing --cov=idlemypyextension"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source_pkgs = ["idlemypyextension"]
omit = []
parallel = true
relative_files = true
source = ["."]

[tool.coverage.report]
precision = 1
skip_covered = true
exclude_also = [
    "pragma: no cover",
    "abc.abstractmethod",
    "if TYPE_CHECKING.*:",
    "if _t.TYPE_CHECKING:",
    "if t.TYPE_CHECKING:",
    "@overload",
    'class .*\bProtocol\b.*\):',
    "raise NotImplementedError",
]
partial_branches = [
    "pragma: no branch",
    "if not TYPE_CHECKING:",
    "if not _t.TYPE_CHECKING:",
    "if not t.TYPE_CHECKING:",
    "if .* or not TYPE_CHECKING:",
    "if .* or not _t.TYPE_CHECKING:",
    "if .* or not t.TYPE_CHECKING:",
]
